# request

./: Cargo.toml  README.md  README_ZH.md  bundle.json
common/database/: BUILD.gn  Cargo.toml
common/database/include/: wrapper.h
common/database/src/: config.rs  database.rs  lib.rs  params.rs  wrapper.rs
common/database/src/cxx/: wrapper.cpp
common/database/tests/ut/: ut_config.rs  ut_database.rs  ut_params.rs  ut_wrapper.rs
common/ffrt_rs/: BUILD.gn  Cargo.toml
common/ffrt_rs/include/: wrapper.h
common/ffrt_rs/src/: lib.rs  wrapper.rs
common/ffrt_rs/src/cxx/: wrapper.cpp
common/ffrt_rs/tests/ut/: ut_lib.rs  ut_wrapper.rs
common/netstack_rs/: BUILD.gn  Cargo.toml
common/netstack_rs/include/: netstack.h  wrapper.h
common/netstack_rs/src/: error.rs  info.rs  lib.rs  request.rs  response.rs  task.rs  wrapper.rs
common/netstack_rs/src/cxx/: netstack.cpp  wrapper.cpp
common/netstack_rs/tests/ut/: ut_error.rs  ut_info.rs  ut_request.rs  ut_request_set.rs  ut_response.rs  ut_task.rs  ut_wrapper.rs
common/request_core/: BUILD.gn  Cargo.toml
common/request_core/src/: config.rs  error_code.rs  file.rs  filter.rs  info.rs  interface.rs  lib.rs
common/sys_event/: BUILD.gn
common/sys_event/include/: sys_event.h
common/sys_event/src/: sys_event.cpp
common/utils/: BUILD.gn  Cargo.toml
common/utils/include/: request_utils_dataability.h  request_utils_network.h  request_utils_wrapper.h
common/utils/src/: context.rs  dataabilitylib.rs  fastrand.rs  file_control.rs  hilog.rs  lib.rs  lru.rs  macros.rs  request_hilog.rs  storage.rs  task_id.rs  wrapper.rs
common/utils/src/cxx/: request_utils_dataability.cpp  request_utils_network.cpp  request_utils_wrapper.cpp
common/utils/src/dataability/: mod.rs  wrapper.rs
common/utils/src/hash/: mod.rs  sha256.rs  url.rs
common/utils/src/observe/: mod.rs
common/utils/src/test/: log.rs  mod.rs  server.rs
common/utils/tests/ut/: ut_context.rs  ut_fastrand.rs  ut_file_control.rs  ut_lru.rs  ut_task_id.rs  ut_wrapper.rs
frameworks/cj/ffi/: BUILD.gn
frameworks/cj/ffi/include/: cj_app_state_callback.h  cj_initialize.h  cj_listener_list.h  cj_notify_data_listener.h  cj_request_common.h  cj_request_event.h  cj_request_ffi.h  cj_request_impl.h  cj_request_task.h  cj_response_listener.h
frameworks/cj/ffi/src/: cj_app_state_callback.cpp  cj_initialize.cpp  cj_listener_list.cpp  cj_notify_data_listener.cpp  cj_request_common.cpp  cj_request_event.cpp  cj_request_ffi.cpp  cj_request_impl.cpp  cj_request_task.cpp  cj_response_listener.cpp
frameworks/ets/ani/cache_download/: BUILD.gn  Cargo.toml
frameworks/ets/ani/request/: BUILD.gn  Cargo.toml
frameworks/js/ani/: BUILD.gn
frameworks/js/ani/ets/: @ohos.request.ets
frameworks/js/ani/include/: ani_common_utils.h  ani_js_initialize.h  ani_task.h  ani_utils.h  base.h  class.h  listener_list.h  memory.h
frameworks/js/ani/src/: ani_js_initialize.cpp  ani_task.cpp  listener_list.cpp  request_module_ani.cpp
frameworks/js/napi/cache_download/: BUILD.gn
frameworks/js/napi/preload_napi/: BUILD.gn  libcache_download.map
frameworks/js/napi/request/: BUILD.gn
frameworks/native/cache_core/: BUILD.gn  Cargo.toml
frameworks/native/cache_core/include/: inotify_event_listener.h  native_ffi.h
frameworks/native/cache_core/src/: lib.rs  manage.rs  observe.rs  update.rs  wrapper.rs
frameworks/native/cache_download/: BUILD.gn  Cargo.toml
frameworks/native/cache_download/benches/: agent.rs  utils.rs
frameworks/native/cache_download/include/: preload_callback.h
frameworks/native/cache_download/src/: info.rs  lib.rs  macros.rs  observe.rs  services.rs  wrapper.rs
frameworks/native/request/: BUILD.gn  libdownload_single.map
frameworks/native/request/include/: download_server_ipc_interface_code.h  i_notify_data_listener.h  i_response_listener.h  i_response_message_handler.h  notify_interface.h  parcel_helper.h  path_control.h  request.h  request_common.h  request_common_utils.h  request_manager.h  request_manager_impl.h  request_running_task_count.h  request_service_interface.h  request_service_proxy.h  response_message_receiver.h  runcount_notify_stub.h  task_builder.h
frameworks/native/request/src/: parcel_helper.cpp  request.cpp  request_common_utils.cpp  request_manager.cpp  request_manager_impl.cpp  request_running_task_count.cpp  request_service_proxy.cpp  response_message_receiver.cpp  runcount_notify_stub.cpp
frameworks/native/request_action/: BUILD.gn
frameworks/native/request_action/src/: path_control.cpp  request_action.cpp  (+1 more)
frameworks/native/request_next/: BUILD.gn  Cargo.toml
services/: BUILD.gn  Cargo.toml
services/examples/: run_count.rs
services/include/: account.h  application_state_observer.h  bundle.h  c_form_item.h  c_progress.h  c_request_database.h  c_string_wrapper.h  c_task_config.h  c_task_info.h  common_event.h  get_proxy.h  log.h  network.h  notification_bar.h  request_cert_mgr_adapter.h  request_utils.h  runcount_observer.h  url_policy.h
services/src/: ability.rs  database.rs  error.rs  lib.rs  macros.rs  sys_event.rs  trace.rs
services/src/cxx/: account.cpp  application_state_observer.cpp  bundle.cpp  c_request_database.cpp  c_string_wrapper.cpp  c_task_config.cpp  c_task_info.cpp  common_event.cpp  get_proxy.cpp  network.cpp  notification_bar.cpp  request_cert_mgr_adapter.cpp  request_utils.cpp  runcount_observer.cpp  url_policy.cpp
services/src/manage/: account.rs  app_state.rs  database.rs  mod.rs  network.rs  network_manager.rs  notifier.rs  query.rs  task_manager.rs
services/src/service/: active_counter.rs  interface.rs  mod.rs  permission.rs  stub.rs
services/src/task/: bundle.rs  client.rs  config.rs  download.rs  ffi.rs  files.rs  info.rs  mod.rs  notify.rs  operator.rs  reason.rs  request_task.rs  speed_limiter.rs  task_control.rs  upload.rs
services/src/utils/: c_wrapper.rs  common_event.rs  form_item.rs  mod.rs  task_event_count.rs  task_id_generator.rs  url_policy.rs
services/tests/: BUILD.gn  construct.rs  entry.rs  resume.rs  search.rs  start.rs
services/tests/ut/: ut_database.rs  ut_error.rs
(+252 files in other folders)
