# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/request/request/request_aafwk.gni")
import("//build/ohos.gni")

config("request_sysevent_config") {
  include_dirs = [
    "include",
    "${target_gen_dir}/src",
    "../include",
  ]
}

ohos_static_library("request_sysevent") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  stack_protector_ret = true

  sources = [ "src/sys_event.cpp" ]

  public_configs = [ ":request_sysevent_config" ]

  external_deps = [
    "hilog:libhilog",
    "hisysevent:libhisysevent",
  ]

  subsystem_name = "request"
  part_name = "request"
}
