# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/request/request/request_aafwk.gni")
import("//build/test.gni")

ohos_rust_unittest("rust_request_ut_test") {
  module_out_path = "request/request/request_rust"

  sources = [ "../src/lib.rs" ]
  deps = [
    "../../common/database:database_rs",
    "../../common/utils:request_utils",
    "../../services:download_server_cxx",
    "../../test/rustest/c:request_test",
  ]

  rustflags = [ "--cfg=feature=\"oh\"" ]

  external_deps = [
    "hilog:hilog_rust",
    "hilog:libhilog",
    "hisysevent:hisysevent_rust",
    "hitrace:hitrace_meter_rust",
    "ipc:ipc_rust",
    "netstack:ylong_http_client",
    "rust_cxx:lib",
    "safwk:system_ability_fwk_rust",
    "samgr:samgr_rust",
    "ylong_runtime:ylong_runtime",
  ]

  subsystem_name = "request"
  part_name = "request"
}

ohos_rust_unittest("rust_request_sdv_test") {
  module_out_path = "request/request/request_rust"

  rustflags = [
    "--cfg=gn_test",
    "--cfg=feature=\"oh\"",
  ]

  sources = [ "entry.rs" ]

  deps = [
    "../../services:download_server",
    "../../test/rustest:rust_request_test_common",
  ]

  external_deps = [
    "ipc:ipc_rust",
    "safwk:system_ability_fwk_rust",
    "samgr:samgr_rust",
    "ylong_runtime:ylong_runtime",
  ]

  subsystem_name = "request"
  part_name = "request"
}

group("unittest") {
  testonly = true
  deps = []

  if (!use_clang_coverage) {
    deps = [
      ":rust_request_sdv_test",
      ":rust_request_ut_test",
    ]
  }
}
