# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cache_core"
version = "0.1.0"
edition = "2021"

[features]
default = []

ohos = [
    "request_utils/ohos",
    "ffrt_rs",
]

[dependencies]
cxx = { version = "1.0.115", optional = true }

ffrt_rs = { path = "../../../common/ffrt_rs", optional = true }
request_utils = { path = "../../../common/utils" }
ylong_runtime = { git = "https://gitcode.com/openharmony/commonlibrary_rust_ylong_runtime", features = ["full"] }
