# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/request/request/request_aafwk.gni")
import("//build/ohos.gni")

config("download_interfaces_kits_napi_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "../../../common/include",
    "../../../interfaces/inner_kits/running_count/include",
  ]

  cflags_cc = [ "-fno-exceptions" ]
  ldflags = [ "-Wl,--exclude-libs=ALL" ]
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
  ]
}

ohos_shared_library("request_native") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  stack_protector_ret = true

  include_dirs = [
    "include",
    "../../../common/include",
    "../../../common/sys_event/include",
    "../../../interfaces/inner_kits/running_count/include",
  ]
  configs = [ "//build/config/gcc:symbol_visibility_hidden" ]
  public_configs = [ ":download_interfaces_kits_napi_config" ]
  version_script = "libdownload_single.map"

  sources = [
    "src/parcel_helper.cpp",
    "src/request.cpp",
    "src/request_common_utils.cpp",
    "src/request_manager.cpp",
    "src/request_manager_impl.cpp",
    "src/request_running_task_count.cpp",
    "src/request_service_proxy.cpp",
    "src/response_message_receiver.cpp",
    "src/runcount_notify_stub.cpp",
  ]

  deps = [ "../../../common/sys_event:request_sysevent" ]

  external_deps = [
    "ability_runtime:extensionkit_native",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
    "ipc:ipc_single",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "request"
  innerapi_tags = [ "platformsdk" ]
  part_name = "request"
}
