# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/request/request/request_aafwk.gni")
import("//build/ohos.gni")

config("request_action_config") {
  include_dirs = [
    "../../../interfaces/inner_kits/request_action/include",
    "../request/include",
    "../../../common/include",
  ]
}

ohos_shared_library("request_action") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  stack_protector_ret = true

  deps = [ "../request:request_native" ]

  public_configs = [ ":request_action_config" ]
  external_deps = [
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:data_ability_helper",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "app_file_service:fileuri_native",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "netmanager_base:net_conn_manager_if",
    "netmanager_base:net_security_config_if",
    "storage_service:storage_manager_acl",
  ]

  sources = [
    "src/path_control.cpp",
    "src/request_action.cpp",
    "src/task_builder.cpp",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "request"
  part_name = "request"
}
